--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,30 +1,27 @@
 @import "bootstrap" ;
+/* mixins, variables, etc */
 
-
+$greyMediumLight: #eaeaea;
+  
 /* universal */
 
 html {
   overflow-y :scroll;
 }
-
 body {
   padding-top: 60px;
 }
-
 section {
   overflow: auto;
 }
-
 textarea {
   resize: vertical;
 }
-
 .center {
   text-align: center;
-}
-
-.center h1 {
-  margin-bottom: 10px;
+  h1 {
+    margin-bottom: 10px;
+  }
 }
 
 /* typography */
@@ -32,23 +29,20 @@ textarea {
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
-
 h1 {
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align:center;
 }
-
 h2 {
   font-size: 1.2em;
   letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #999;
+  color: $greyLight;
 }
-
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -60,17 +54,16 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 1.7 em;
-  color: #fff;
+  color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
-}
-
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
 }
 
 /* footer */
@@ -78,12 +71,16 @@ p {
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #999;
-  
-  a {color: #555;}
-  a:hover {color: #222;}
-  small {float: left;}
+  border-top: 1px solid $greyMediumLight;
+  color: $greyLight;  
+  a {color: $grey;
+    &:hover {
+      color: $greyDarker;
+    }
+  }
+  small {
+    float: left;
+  }
   ul {
     float:right;
     list-style: none;
