reroutes using dynamic paths

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,9 @@
 /* mixins, variables, etc */
 
 $greyMediumLight: #eaeaea;
+$greyLight: #999;
+$greyDarker: #222;
+$grey: #555;
   
 /* universal */
 
