adds gravatar to user based on M5S hash in helper, adds sidebar css for show.html

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,13 @@
 <% provide(:title, @user.name) %>
 <h1>Come look at the user!</h1>
-
-<%= @user.name %>, <%= @user.email %>
+<div class="row">
+  <aside class="span4">
+    <section> 
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+        <%= @user.email %>
+      </h1>
+    </section>
+  </aside>
+</div>
