--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
                 <li><%= link_to "Settings", '#' %></li>
                 <li class="divider"></li>
                 <li>
-                  <%= link_to "Sign_out", signout_path, method: "delete" %>
+                  <%= link_to "Sign out", signout_path, method: "delete" %>
                 </li>
               </ul>
             </li>
