--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, 'All users') %> 
 <h1>All users</h1>
-<ul class="users">
 
+<%= will_paginate %>            #creates paginated links above
+
+<ul class="users">
   <% @users.each do |user| %>
     <li>
       <%= gravatar_for user, size: 52 %>
@@ -9,3 +11,5 @@
     </li>
   <% end %> 
 </ul>
+
+<%= will_paginate %>            #creates paginated links below
