--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,11 +5,8 @@
 
 <ul class="users">
   <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user, size: 52 %>
-      <%= link_to user.name, user %> 
-    </li>
-  <% end %> 
+    <%= render @users %>        #Rails infers @users is User class list
+  <% end %>                     #so will render partial called _user for ea
 </ul>
 
 <%= will_paginate %>            #creates paginated links below
